# ai-proof-prototype

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  VERIFICATION_FEATURES.md  docker-compose.yml  fly.toml  mock-ipfs-storage.json  mock-prover-server.js  next.config.js  package-lock.json  package.json  pino-pretty-stub.js  test-hosted-prover.js  test-publish-flow.js  test-verification.js  test_real_input.txt  test_real_journal.json
api/: crypto.ts  indexStore.ts  ipfs.ts  model.ts  prover.ts  providers.ts  types.ts  verify.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/health/: route.ts
app/api/ipfs-upload/: route.ts
app/api/publish/: route.ts
app/api/summarize/: route.ts
app/api/verify-content/: route.ts
app/api/verify-content-simple/: route.ts
app/api/verify-local/: route.ts
app/api/verify-provenance/: route.ts
app/api/verify-signature/: route.ts
app/api/verify-zk/: route.ts
app/components/: CidVerificationPanel.tsx  ContentTypeSelector.tsx  OutputArea.tsx  ShareModal.tsx  SimpleVerificationPanel.tsx  VerificationPanel.tsx  WalletBox.tsx
expected/: image.digest  model.sha256
scripts/: verify-clean.ps1  verify-signature.js  verify.ps1  verify.sh
zk/: Cargo.toml  real_journal.json  test_input.txt  test_journal.json
zk/guest/: Cargo.toml
zk/guest/src/: main.rs  stopwords.txt
zk/host/: Cargo.toml
zk/host/methods/: guest.rs
zk/host/src/: main.rs
zk/host/src/methods/: guest.rs  mod.rs
zk/methods/: Cargo.toml  build.rs
zk/methods/src/: lib.rs
