[workspace]
members = ["guest", "host"]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = { version = "1.0" }
risc0-build = { version = "1.0" }
risc0-binfmt = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }