[workspace]
members = ["guest", "host", "methods"]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = { version = "0.21.0", default-features = true }
risc0-build = { version = "0.21.0" }
risc0-binfmt = { version = "0.21.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
getrandom = { version = "0.2", features = ["custom"] }