[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true, default-features = false }
sha2 = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }

[[bin]]
name = "guest"
path = "src/main.rs"