[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { workspace = true, features = ["prove"] }
risc0-binfmt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
bincode = "1.3"



[[bin]]
name = "zkhost"
path = "src/main.rs"